responsive de index y boda x sass

--- a/scss/layout/_main-boda.scss
+++ b/scss/layout/_main-boda.scss
@@ -70,7 +70,9 @@
         @include flex-img(column,center,30px);
         display: flex;
         .familia-libreta {
-            width: 813px;
+            display: flex;
+            align-self: center;
+            width: 812px;
             height: 437px;
         }
         
