--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,17 @@
 @import "./components/botones";
 @import "./layout/header-book";
 @import "./layout/main-book";
-
+@import "./layout/media-index1277";
+@import "./layout/media-index1217";
+@import "./layout/media-index1024";
+@import "./layout/media-index768";
+@import "./layout/media-index425";
+@import "./layout/media-index375";
+@import "./layout/media-index320";
+@import "./layout/media-boda1024";
+@import "./layout/media-boda768";
+@import "./layout/media-boda425";
+@import "./layout/media-index375";
+@import "./layout/media-boda320";
 
 /**UTILIZAR @EXTEND PARA COPIAR MISMAS ETIQUETAS: FONT SIZE COLOR ETC*/
