--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,9 @@ h2 {
     padding: 30px;
     display: flex; }
     .galeria-boda .img-boda .familia-libreta {
-      width: 813px;
+      display: flex;
+      align-self: center;
+      width: 812px;
       height: 437px; }
     .galeria-boda .img-boda .casados-mirandose {
       display: flex;
@@ -632,5 +634,719 @@ h2 {
       grid-row-start: 4;
       grid-row-end: 4;
       justify-self: center; }
+
+@media (max-width: 1277px) {
+  .headerFormulario h1 {
+    font-size: 75px; }
+  .main-buscador {
+    padding: 35px; }
+    .main-buscador .navBar li {
+      padding-left: 85px; } }
+
+/**
+@media (max-width:1217px){
+    .main-buscador{
+        
+        .navBar li {
+            padding-left: 80px;
+        }
+    }
+}*/
+@media (max-width: 1217px) {
+  .container-1 .main-buscador {
+    padding: 30px; }
+    .container-1 .main-buscador .navBar li {
+      padding-left: 90px; } }
+
+@media (max-width: 1075px) {
+  .container-1 .main-buscador {
+    padding: 28px; }
+    .container-1 .main-buscador .navBar li {
+      padding-left: 80px; } }
+
+@media (max-width: 1024px) {
+  .headerFormulario h1 {
+    font-size: 60px; }
+  .container .main-buscador {
+    padding: 25px; }
+    .container .main-buscador .navBar li {
+      padding-left: 70px;
+      font-size: 21px; }
+  .section-index .descripcion-index p {
+    font-size: 25px; }
+  /*
+    .navBar li{
+        padding: 30px;
+        font-size: 21px;
+    }
+    .descripcion-index p{
+        font-size: 25px;
+    }
+}
+*/ }
+
+@media (max-width: 1024px) and (max-width: 969px) {
+  .headerFormulario h1 {
+    font-size: 50px; } }
+
+@media (max-width: 1024px) and (max-width: 866px) {
+  .headerFormulario h1 {
+    font-size: 45px; } }
+
+@media (max-width: 1024px) {
+  .container-1 .main-buscador {
+    padding: 25px; }
+    .container-1 .main-buscador .navBar li {
+      padding: 25px;
+      font-size: 20px; }
+  .section-index .descripcion-index {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    gap: 10px;
+    padding-top: 50px;
+    padding-bottom: 150px;
+    padding-left: 70px;
+    padding-right: 70px; }
+    .section-index .descripcion-index p {
+      font-size: 22px;
+      text-align: center; } }
+
+/*
+    .navBar li{
+        padding: 25px;
+        font-size: 20px;
+    }
+    .descripcion-index p{
+        font-size: 22px;
+        text-align:center;
+    }
+    .descripcion-index{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        gap: 10px;
+        padding-top: 50px;
+        padding-bottom: 150px;
+        padding-left: 70px;
+        padding-right: 70px;
+    
+}
+}
+*/
+@media (max-width: 800px) {
+  .container .main-buscador .navBar li {
+    padding: 20px;
+    font-size: 18px; }
+  .section-index .descripcion-index {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: auto;
+    gap: 8px;
+    padding-top: 50px;
+    padding-bottom: 150px;
+    padding-left: 60px;
+    padding-right: 60px; } }
+
+/*
+    .navBar li{
+        padding: 20px;
+        font-size: 18px;
+    }
+    .descripcion-index{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        width: auto;
+        gap: 8px;
+        padding-top: 50px;
+        padding-bottom: 150px;
+        padding-left: 60px;
+        padding-right: 60px;
+}
+}
+*/
+@media (max-width: 768px) {
+  .headerFoto {
+    height: 300px; }
+  .section-index .descripcion-index {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    gap: 8px;
+    padding-top: 50px;
+    padding-bottom: 150px;
+    padding-left: 50px;
+    padding-right: 20px; } }
+
+@media (max-width: 728px) {
+  .section-index .descripcion-index {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    gap: 8px;
+    padding-top: 50px;
+    padding-bottom: 150px;
+    padding-left: 35px;
+    padding-right: 20px; }
+    .section-index .descripcion-index p {
+      font-size: 20px; }
+    .section-index .descripcion-index img {
+      width: 300px;
+      height: 250px; } }
+
+/*
+.descripcion-index{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        gap: 8px;
+        padding-top: 50px;
+        padding-bottom: 150px;
+        padding-left: 35px;
+        padding-right: 20px;
+    }
+    .fotoFlor{
+        width: 300px;
+        height: 250px;
+    }
+    */
+@media (max-width: 684px) {
+  .headerFormulario h1 {
+    font-size: 35px; }
+  .container-1 {
+    position: static; }
+    .container-1 .main-buscador ul {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center; }
+  .section-index .descripcion-index {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    gap: 5px;
+    padding-top: 50px;
+    padding-bottom: 150px;
+    padding-left: 35px;
+    padding-right: 20px; }
+    .section-index .descripcion-index .descripcion-index p {
+      font-size: 18px; }
+    .section-index .descripcion-index .fotoFlor {
+      width: 270px;
+      height: 220px; }
+  .footerConsulta {
+    font-size: 20px; }
+  .footer-section .footerBsas p {
+    font-size: 18px; }
+  .galeria-1 .img-index .corazon-embarazada {
+    width: 230px;
+    height: 380px; }
+  .galeria-1 .img-index .mujeres-beso {
+    width: 340px;
+    height: 450px; }
+  .galeria-1 .img-index .mujer-mirando {
+    width: 150px;
+    height: 180px; }
+  .galeria-1 .img-index .hombre-nene {
+    width: 440px;
+    height: 100px; }
+  .galeria-1 .img-index .pareja-byn {
+    width: 360px;
+    height: 150px; }
+  .galeria-1 .img-index .familia-feliz {
+    width: 230px;
+    height: 360px; }
+  .galeria-1 .img-index .nene-sonriendo1 {
+    width: 190px;
+    height: 525px; }
+  /*
+    .corazon-embarazada{
+        width: 230px;
+        height: 380px;
+    }
+    .mujeres-beso{
+        width: 340px;
+        height: 450px;
+    }
+    .mujer-mirando{
+        width: 150px;
+        height: 180px;
+    }
+    .hombre-nene{
+        width: 440px;
+        height: 100px;
+    }
+    .pareja-byn{
+        width: 360px;
+        height: 150px;
+    }
+    .familia-feliz{
+        width: 230px;
+        height: 360px;
+    }
+    .nene-sonriendo1{
+        width: 190px;
+        height: 525px;
+    }
+}*/ }
+
+@media (max-width: 684px) and (max-width: 590px) {
+  .headerFormulario h1 {
+    font-size: 30px; } }
+
+@media (max-width: 684px) {
+  .section-index .descripcion-index {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 50px;
+    padding: 50px; }
+    .section-index .descripcion-index img {
+      display: flex;
+      flex-direction: column;
+      align-self: center; }
+    .section-index .descripcion-index p {
+      display: flex;
+      flex-direction: column;
+      align-self: center; }
+  .galeria-1 .img-index .corazon-embarazada {
+    width: 210px;
+    height: 360px; }
+  .galeria-1 .img-index .mujeres-beso {
+    width: 320px;
+    height: 430px; }
+  .galeria-1 .img-index .mujer-mirando {
+    width: 150px;
+    height: 180px; }
+  .galeria-1 .img-index .hombre-nene {
+    width: 420px;
+    height: 90px;
+    display: flex;
+    align-self: center; }
+  .galeria-1 .img-index .pareja-byn {
+    width: 340px;
+    height: 135px; }
+  .galeria-1 .img-index .familia-feliz {
+    width: 215px;
+    height: 345px; }
+  .galeria-1 .img-index .nene-sonriendo1 {
+    width: 180px;
+    height: 510px; }
+  .footerConsulta {
+    font-size: 19px; } }
+
+@media (max-width: 425px) {
+  .headerFormulario h1 {
+    font-size: 25px; }
+  .galeria-1 .img-index .corazon-embarazada {
+    display: flex;
+    align-self: center;
+    width: 200px;
+    height: 340px;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .mujeres-beso {
+    width: 290px;
+    height: 390px;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .mujer-mirando {
+    width: 150px;
+    height: 180px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .hombre-nene {
+    width: 370px;
+    height: 80px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .pareja-byn {
+    width: 320px;
+    height: 115px;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .familia-feliz {
+    width: 200px;
+    height: 310px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .nene-sonriendo1 {
+    width: 180px;
+    height: 480px; } }
+
+@media (max-width: 375px) {
+  .headerFormulario h1 {
+    font-size: 22px; }
+  .galeria-1 .img-index .corazon-embarazada {
+    display: flex;
+    align-self: center;
+    width: 180px;
+    height: 300px;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .mujeres-beso {
+    width: 260px;
+    height: 360px;
+    margin-bottom: 15px;
+    display: flex;
+    align-self: center; }
+  .galeria-1 .img-index .mujer-mirando {
+    width: 150px;
+    height: 180px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .hombre-nene {
+    width: 320px;
+    height: 70px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .pareja-byn {
+    width: 290px;
+    height: 115px;
+    margin-bottom: 15px;
+    display: flex;
+    align-self: center; }
+  .galeria-1 .img-index .familia-feliz {
+    width: 200px;
+    height: 310px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .nene-sonriendo1 {
+    width: 180px;
+    height: 450px; } }
+
+@media (max-width: 320px) {
+  .galeria-1 .img-index .hombre-nene {
+    width: 280px;
+    height: 70px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; } }
+
+@media (max-width: 1024px) {
+  .container-1 .main-section .navBar2 li {
+    display: inline;
+    font-size: 24px;
+    padding: 35px; }
+  .galeria-boda .img-boda {
+    margin: 0; }
+    .galeria-boda .img-boda .casados-mirandose {
+      margin-bottom: 20px; }
+    .galeria-boda .img-boda .mujer-mirandomarido {
+      margin-bottom: 20px; }
+    .galeria-boda .img-boda .pareja-civil {
+      margin-top: 15px; } }
+
+@media (max-width: 992px) {
+  .container-1 .main-section .navBar2 li {
+    display: inline;
+    font-size: 24px;
+    padding: 30px; } }
+
+@media (max-width: 938px) {
+  .container-1 .main-section .navBar2 li {
+    display: inline;
+    font-size: 22px;
+    padding: 28px; } }
+
+@media (max-widht: 900px) {
+  .galeria-boda .img-boda .familia-libreta {
+    width: 780px;
+    height: 415px; } }
+
+@media (max-width: 868px) {
+  .container-1 .main-section {
+    padding: 32px; }
+    .container-1 .main-section .navBar2 li {
+      padding: 28px;
+      font-size: 18px; }
+  .galeria-boda .img-boda .familia-libreta {
+    width: 750px;
+    height: 415px; } }
+
+@media (max-width: 820px) {
+  .container-1 .main-section {
+    padding: 30px; }
+    .container-1 .main-section .navBar2 li {
+      padding: 26px;
+      font-size: 18px; }
+  .galeria-boda .img-boda {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .galeria-boda .img-boda .familia-libreta {
+      display: flex;
+      align-self: center;
+      width: 613px;
+      margin-bottom: 15px; }
+    .galeria-boda .img-boda .casados-mirandose {
+      margin-bottom: 15px; }
+    .galeria-boda .img-boda .mujer-mirandomarido {
+      margin-bottom: 15px; } }
+
+@media (max-width: 794px) {
+  .galeria-boda .img-boda .pareja-civil {
+    display: flex;
+    align-self: center; } }
+
+@media (max-width: 784px) {
+  .galeria-boda .img-boda .casados-mirandose {
+    width: 470px;
+    height: 700px; }
+  .galeria-boda .img-boda .pareja-civil {
+    width: 600px;
+    height: 300px; } }
+
+@media (max-width: 768px) {
+  .container-1 .main-section {
+    padding: 28px; }
+    .container-1 .main-section .navBar2 {
+      background-color: beige; }
+      .container-1 .main-section .navBar2 li {
+        display: inline;
+        font-size: 17px;
+        padding: 25px; }
+  .container-1 .descripcion-boda p {
+    font-size: 17px;
+    text-align: center; }
+  .container-1 .galeria-boda .img-boda {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .container-1 .galeria-boda .img-boda .familia-libreta {
+      display: flex;
+      align-self: flex-end;
+      width: 580px; }
+    .container-1 .galeria-boda .img-boda .casados-mirandose {
+      display: flex;
+      align-self: center;
+      margin-bottom: 20px; }
+    .container-1 .galeria-boda .img-boda .mujer-mirandomarido {
+      display: flex;
+      align-self: center;
+      margin-bottom: 20px; }
+    .container-1 .galeria-boda .img-boda .pareja-civil {
+      display: flex;
+      align-self: flex-start;
+      width: 650px;
+      margin-left: 20px; } }
+
+@media (max-width: 768px) and (max-width: 744px) {
+  .container-1 .main-section {
+    padding: 26px; }
+    .container-1 .main-section .navBar2 li {
+      display: inline;
+      font-size: 17px;
+      padding: 24px; } }
+
+@media (max-width: 768px) {
+  /*@media (max-width:730px){
+        .galeria-boda{
+            margin: 0px;
+        }
+    }
+    **/ }
+
+@media (max-width: 768px) and (max-width: 696px) {
+  .container-1 .main-section {
+    padding: 24px; }
+    .container-1 .main-section .navBar2 li {
+      display: inline;
+      font-size: 17px;
+      padding: 22px; } }
+
+@media (max-width: 768px) and (max-width: 668px) {
+  .container-1 .main-section {
+    padding: 23px; }
+    .container-1 .main-section .navBar2 li {
+      display: inline;
+      font-size: 17px;
+      padding: 20px; } }
+
+@media (max-width: 768px) {
+  .galeria-boda {
+    margin: 0px; }
+    .galeria-boda .img-boda .pareja-civil {
+      display: flex;
+      align-self: center;
+      margin-left: 50px; } }
+
+@media (max-width: 768px) and (max-width: 645px) {
+  .container-1 .main-section {
+    padding: 21px; }
+    .container-1 .main-section .navBar2 li {
+      display: inline;
+      font-size: 17px;
+      padding: 19px; }
+  .descripcion-boda p {
+    text-align: center;
+    font-size: 16px; }
+  .galeria-boda {
+    margin: 0; }
+    .galeria-boda .img-boda {
+      display: flex;
+      flex-direction: column; }
+      .galeria-boda .img-boda .familia-libreta {
+        display: flex;
+        align-self: center;
+        padding-left: 25px; }
+      .galeria-boda .img-boda .pareja-civil {
+        margin: 0px;
+        display: flex;
+        align-self: center;
+        width: 550px;
+        height: 350px; } }
+
+@media (max-width: 768px) and (max-width: 628px) {
+  .container-1 .main-section {
+    padding: 19px; }
+    .container-1 .main-section .navBar2 li {
+      display: inline;
+      font-size: 17px;
+      padding: 17px; } }
+
+@media (max-width: 768px) and (max-width: 610px) {
+  .container-1 .main-section {
+    padding: 17px; }
+    .container-1 .main-section .navBar2 li {
+      display: inline;
+      font-size: 17px;
+      padding: 15px; }
+  .container-1 .descripcion-boda p {
+    text-align: center;
+    padding-right: 20px; } }
+
+@media (max-width: 768px) and (max-width: 581px) {
+  .descripcion-boda p {
+    text-align: center;
+    padding-right: 20px; } }
+
+@media (max-width: 768px) and (max-width: 572px) {
+  .descripcion-boda {
+    text-align: center;
+    padding-right: 15px; }
+  .galeria-boda .img-boda .familia-libreta {
+    width: 488px;
+    height: 360px; }
+  .galeria-boda .img-boda .casados-mirandose {
+    width: 500px;
+    height: 720px; }
+  .galeria-boda .img-boda .pareja-civil {
+    width: 520px;
+    height: 420px; } }
+
+@media (max-width: 768px) and (max-width: 555px) {
+  .container-1 .main-section {
+    padding: 20px; }
+    .container-1 .main-section .navBar2 li {
+      display: inline;
+      font-size: 17px;
+      padding: 17px; } }
+
+@media (max-width: 768px) and (max-width: 553px) {
+  .container-1 {
+    position: static; }
+    .container-1 .main-section .navBar2 li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #ebdfc1; }
+  .galeria-boda .img-boda .familia-libreta {
+    width: 480px;
+    height: 380px;
+    align-self: center; }
+  .galeria-boda .img-boda .casados-mirandose {
+    width: 400px;
+    height: 650px;
+    align-self: center; }
+  .galeria-boda .img-boda .mujer-mirandomarido {
+    width: 350px;
+    height: 350px;
+    align-self: center; }
+  .galeria-boda .img-boda .pareja-civil {
+    width: 480px;
+    height: 350px;
+    align-self: center; } }
+
+@media (max-width: 425px) {
+  .galeria-boda .img-boda {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .galeria-boda .img-boda .familia-libreta {
+      width: 400px;
+      height: 300px;
+      align-self: center; }
+    .galeria-boda .img-boda .casados-mirandose {
+      width: 350px;
+      height: 600px; }
+    .galeria-boda .img-boda .mujer-mirandomarido {
+      width: 300px;
+      height: 300px; }
+    .galeria-boda .img-boda .pareja-civil {
+      align-self: center;
+      padding-left: 20px;
+      width: 410px;
+      height: 290px; } }
+
+@media (max-width: 375px) {
+  .headerFormulario h1 {
+    font-size: 22px; }
+  .galeria-1 .img-index .corazon-embarazada {
+    display: flex;
+    align-self: center;
+    width: 180px;
+    height: 300px;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .mujeres-beso {
+    width: 260px;
+    height: 360px;
+    margin-bottom: 15px;
+    display: flex;
+    align-self: center; }
+  .galeria-1 .img-index .mujer-mirando {
+    width: 150px;
+    height: 180px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .hombre-nene {
+    width: 320px;
+    height: 70px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .pareja-byn {
+    width: 290px;
+    height: 115px;
+    margin-bottom: 15px;
+    display: flex;
+    align-self: center; }
+  .galeria-1 .img-index .familia-feliz {
+    width: 200px;
+    height: 310px;
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px; }
+  .galeria-1 .img-index .nene-sonriendo1 {
+    width: 180px;
+    height: 450px; } }
+
+@media (max-width: 320px) {
+  .descripcion-boda p {
+    font-size: 16px; }
+  .galeria-boda .img-boda .familia-libreta {
+    width: 315px;
+    height: 250px; }
+  .galeria-boda .img-boda .casados-mirandose {
+    width: 310px;
+    height: 560px; }
+  .galeria-boda .img-boda .mujer-mirandomarido {
+    width: 270px;
+    height: 270px; } }
 
 /**UTILIZAR @EXTEND PARA COPIAR MISMAS ETIQUETAS: FONT SIZE COLOR ETC*/
