--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,12 @@
 @import "./layout/media-boda1024";
 @import "./layout/media-boda768";
 @import "./layout/media-boda425";
-@import "./layout/media-index375";
+@import "./layout/media-boda375";
 @import "./layout/media-boda320";
+@import "./layout/media-eventos1024";
+@import "./layout/media-eventos768";
+@import "./layout/media-eventos425";
+@import "./layout/media-eventos375";
+@import "./layout/media-eventos320";
 
 /**UTILIZAR @EXTEND PARA COPIAR MISMAS ETIQUETAS: FONT SIZE COLOR ETC*/
