--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,5 +33,12 @@
 @import "./layout/media-eventos425";
 @import "./layout/media-eventos375";
 @import "./layout/media-eventos320";
+@import "./layout/media-contenido1024";
+@import "./layout/media-contenido768";
+@import "./layout/media-contenido425";
+@import "./layout/media-contenido375";
+@import "./layout/media-contenido320";
+@import "./layout/media-contacto1024";
+@import "./layout/media-contacto768";
 
 /**UTILIZAR @EXTEND PARA COPIAR MISMAS ETIQUETAS: FONT SIZE COLOR ETC*/
