--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,11 @@
 @import "./layout/media-index425";
 @import "./layout/media-index375";
 @import "./layout/media-index320";
+@import "./layout/media-book1024";
+@import "./layout/media-book768";
+@import "./layout/media-book425";
+@import "./layout/media-book375";
+@import "./layout/media-book320";
 @import "./layout/media-boda1024";
 @import "./layout/media-boda768";
 @import "./layout/media-boda425";
