responsive en contenido x sass

--- a/scss/layout/_main-contenido.scss
+++ b/scss/layout/_main-contenido.scss
@@ -95,7 +95,7 @@ body{
         }
         
         .marca-5 {
-            align-items: flex-start;
+            align-self: flex-start;
             margin-bottom: 50px;
             width: 460px;
             height: 460px;
