--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,7 @@ body {
       width: 460px;
       height: 460px; }
     .galeria-contenido .img-contenido .marca-5 {
-      align-items: flex-start;
+      align-self: flex-start;
       margin-bottom: 50px;
       width: 460px;
       height: 460px; }
@@ -1713,6 +1713,195 @@ h2 {
   .descripcion-eventos .galeria-eventos .img-eventos .nene-boca {
     width: 230px;
     height: 290px; } }
+
+@media (max-width: 880px) {
+  .galeria-contenido .img-contenido .marca-1 {
+    width: 420px;
+    height: 420px; }
+  .galeria-contenido .img-contenido .marca-2 {
+    width: 420px;
+    height: 420px; }
+  .galeria-contenido .img-contenido .marca-3 {
+    width: 420px;
+    height: 420px; }
+  .galeria-contenido .img-contenido .marca-4 {
+    width: 420px;
+    height: 420px; }
+  .galeria-contenido .img-contenido .marca-5 {
+    width: 420px;
+    height: 420px; } }
+
+@media (max-width: 790px) {
+  .galeria-contenido .img-contenido .marca-1 {
+    width: 400px;
+    height: 400px; }
+  .galeria-contenido .img-contenido .marca-2 {
+    width: 400px;
+    height: 400px; }
+  .galeria-contenido .img-contenido .marca-3 {
+    width: 400px;
+    height: 400px; }
+  .galeria-contenido .img-contenido .marca-4 {
+    width: 400px;
+    height: 400px; }
+  .galeria-contenido .img-contenido .marca-5 {
+    width: 400px;
+    height: 400px; } }
+
+@media (max-width: 740px) {
+  .galeria-contenido .img-contenido .marca-1 {
+    width: 330px;
+    height: 330px; }
+  .galeria-contenido .img-contenido .marca-2 {
+    width: 330px;
+    height: 330px; }
+  .galeria-contenido .img-contenido .marca-3 {
+    width: 330px;
+    height: 330px; }
+  .galeria-contenido .img-contenido .marca-4 {
+    width: 330px;
+    height: 330px; }
+  .galeria-contenido .img-contenido .marca-5 {
+    width: 330px;
+    height: 330px; } }
+
+@media (max-width: 650px) {
+  ain-section {
+    padding: 21px; }
+    ain-section .navBar2 li {
+      display: inline;
+      font-size: 17px;
+      padding: 19px; } }
+
+@media (max-width: 620px) {
+  .container-1 .main-section {
+    padding: 19px; }
+    .container-1 .main-section .navBar2 li {
+      font-size: 17px;
+      padding: 17px; } }
+
+.galeria-contenido .img-contenido .marca-1 {
+  width: 290px;
+  height: 290px; }
+
+.galeria-contenido .img-contenido .marca-2 {
+  width: 290px;
+  height: 290px; }
+
+.galeria-contenido .img-contenido .marca-3 {
+  width: 290px;
+  height: 290px; }
+
+.galeria-contenido .img-contenido .marca-4 {
+  width: 290px;
+  height: 290px; }
+
+.galeria-contenido .img-contenido .marca-5 {
+  width: 290px;
+  height: 290px; }
+
+@media (max-width: 573px) {
+  .container-1 .main-section {
+    padding: 17px; }
+    .container-1 .main-section .navBar2 li {
+      font-size: 17px;
+      padding: 16px; }
+  .galeria-contenido .img-contenido .marca-1 {
+    margin-bottom: 15px;
+    width: 240px;
+    height: 240px; }
+  .galeria-contenido .img-contenido .marca-2 {
+    margin-bottom: 15px;
+    width: 240px;
+    height: 240px; }
+  .galeria-contenido .img-contenido .marca-3 {
+    margin-bottom: 15px;
+    width: 240px;
+    height: 240px; }
+  .galeria-contenido .img-contenido .marca-4 {
+    margin-bottom: 15px;
+    width: 240px;
+    height: 240px; }
+  .galeria-contenido .img-contenido .marca-5 {
+    margin-bottom: 15px;
+    width: 240px;
+    height: 240px; } }
+
+@media (max-width: 425px) {
+  .descripcion-contenido p {
+    font-size: 17px; }
+  .galeria-contenido .img-contenido .marca-1 {
+    margin-bottom: 15px;
+    width: 200px;
+    height: 200px; }
+  .galeria-contenido .img-contenido .marca-2 {
+    margin-bottom: 15px;
+    width: 200px;
+    height: 200px; }
+  .galeria-contenido .img-contenido .marca-3 {
+    margin-bottom: 15px;
+    width: 200px;
+    height: 200px; }
+  .galeria-contenido .img-contenido .marca-4 {
+    margin-bottom: 15px;
+    width: 200px;
+    height: 200px; }
+  .galeria-contenido .img-contenido .marca-5 {
+    margin-bottom: 15px;
+    width: 200px;
+    height: 200px; } }
+
+@media (max-width: 375px) {
+  .galeria-contenido .img-contenido .marca-1 {
+    align-self: center;
+    margin-bottom: 15px;
+    width: 180px;
+    height: 180px; }
+  .galeria-contenido .img-contenido .marca-2 {
+    align-self: center;
+    margin-bottom: 15px;
+    width: 180px;
+    height: 180px; }
+  .galeria-contenido .img-contenido .marca-3 {
+    align-self: center;
+    margin-bottom: 15px;
+    width: 180px;
+    height: 180px; }
+  .galeria-contenido .img-contenido .marca-4 {
+    align-self: center;
+    margin-bottom: 15px;
+    width: 180px;
+    height: 180px; }
+  .galeria-contenido .img-contenido .marca-5 {
+    align-self: center;
+    margin-bottom: 15px;
+    width: 180px;
+    height: 180px; } }
+
+.galeria-contenido .img-contenido .marca-1 {
+  margin-bottom: 15px;
+  width: 150px;
+  height: 150px; }
+
+.galeria-contenido .img-contenido .marca-2 {
+  margin-bottom: 15px;
+  width: 150px;
+  height: 150px; }
+
+.galeria-contenido .img-contenido .marca-3 {
+  margin-bottom: 15px;
+  width: 150px;
+  height: 150px; }
+
+.galeria-contenido .img-contenido .marca-4 {
+  margin-bottom: 15px;
+  width: 150px;
+  height: 150px; }
+
+.galeria-contenido .img-contenido .marca-5 {
+  margin-bottom: 15px;
+  width: 150px;
+  height: 150px; }
 
 @media (max-width: 1024px) {
   .container-contacto .main-contacto .navBarContacto li {
