modificaciones y colocacion de variables

--- a/scss/layout/_header-contenido.scss
+++ b/scss/layout/_header-contenido.scss
@@ -5,5 +5,5 @@ h2 {
     letter-spacing: 2px;
     margin-top: 0px;
     margin-bottom: 0px;
-    background-color: #E6DDC6;
+    background-color: $color-2;
     }
