--- a/scss/layout/_header-index.scss
+++ b/scss/layout/_header-index.scss
@@ -29,7 +29,7 @@
         font-size: 100px;
     
     &::selection{
-        background-color: #A19882;
+        background-color: $color-1;
         
     }
     
