--- a/scss/layout/_main-boda.scss
+++ b/scss/layout/_main-boda.scss
@@ -4,7 +4,7 @@
     z-index: 4;
     
 .main-section {
-    background-color: #A19882;
+    background-color: $color-1;
     padding: 35px;
 
     .navBar2 li {
@@ -19,7 +19,7 @@
 
 }
 .navBar2 {
-    background-color: #A19882;
+    background-color: $color-1;
     
 }
 .navBar2 a {
@@ -27,21 +27,21 @@
     color: black;
 
 &:hover{
-    color:beige;
+    color:$color-pages-hover;
     text-decoration: underline;
 }
 &:active{
     color:#7e5f5f
 }
 &::selection{
-    background-color: #7e5f5f;
+    background-color: $color-pages-active;
     color: white;
 }
 }
 }
 }
 .descripcion-boda{
-    background-color: #C2B8A3;
+    background-color: $color-3;
     background-size: cover;
 
     p{
@@ -54,7 +54,7 @@
     color: black;
     
     &::selection{
-        background-color: #7e5f5f;
+        background-color: $color-pages-active;
         color: white;
         }
 }
