--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ body {
     width: 212px;
     height: 544px; }
 
-.footerConsulta {
+h3 {
   background-color: #A19882;
   font-family: 'Castoro Titling', cursive;
   text-align: left;
@@ -165,6 +165,9 @@ body {
   margin-top: 0px;
   margin-bottom: 0px;
   padding: 5px 0px 5px 0px; }
+  h3::selection {
+    background-color: #7e5f5f;
+    color: white; }
 
 .footer-section {
   background-color: #E6DDC6; }
@@ -178,7 +181,10 @@ body {
     letter-spacing: 1;
     color: black;
     margin-top: 0px; }
-  .footer-section .whatsapp-1 {
+    .footer-section .footerBsas p::selection {
+      background-color: #7e5f5f;
+      color: white; }
+  .footer-section .footerBsas .whatsapp-1 {
     position: fixed;
     bottom: 1px;
     right: 67px; }
@@ -501,9 +507,6 @@ input:focus {
   text-align: start;
   margin-left: 2px;
   margin-bottom: 10px; }
-
-body {
-  margin-top: 0px; }
 
 h2 {
   font-family: 'Castoro Titling', cursive;
@@ -1859,30 +1862,27 @@ h2 {
     width: 180px;
     height: 180px; } }
 
-.galeria-contenido .img-contenido .marca-1, .galeria-contenido .img-contenido .marca-3, .galeria-contenido .img-contenido .marca-5 {
-  margin-bottom: 15px;
-  width: 150px;
-  height: 150px; }
-
-.galeria-contenido .img-contenido .marca-2, .galeria-contenido .img-contenido .marca-4 {
-  margin-bottom: 15px;
-  width: 150px;
-  height: 150px; }
-
-.galeria-contenido .img-contenido .marca-3 {
-  margin-bottom: 15px;
-  width: 150px;
-  height: 150px; }
-
-.galeria-contenido .img-contenido .marca-4 {
-  margin-bottom: 15px;
-  width: 150px;
-  height: 150px; }
-
-.galeria-contenido .img-contenido .marca-5 {
-  margin-bottom: 15px;
-  width: 150px;
-  height: 150px; }
+@media (max-width: 320px) {
+  .galeria-contenido .img-contenido .marca-1, .galeria-contenido .img-contenido .marca-3, .galeria-contenido .img-contenido .marca-5 {
+    margin-bottom: 15px;
+    width: 150px;
+    height: 150px; }
+  .galeria-contenido .img-contenido .marca-2, .galeria-contenido .img-contenido .marca-4 {
+    margin-bottom: 15px;
+    width: 150px;
+    height: 150px; }
+  .galeria-contenido .img-contenido .marca-3 {
+    margin-bottom: 15px;
+    width: 150px;
+    height: 150px; }
+  .galeria-contenido .img-contenido .marca-4 {
+    margin-bottom: 15px;
+    width: 150px;
+    height: 150px; }
+  .galeria-contenido .img-contenido .marca-5 {
+    margin-bottom: 15px;
+    width: 150px;
+    height: 150px; } }
 
 @media (max-width: 1024px) {
   .container-contacto .main-contacto .navBarContacto li {
