--- a/scss/layout/_footer-index.scss
+++ b/scss/layout/_footer-index.scss
@@ -1,16 +1,19 @@
-.footerConsulta {
-    background-color: #A19882;
+h3 {
+    background-color: $color-1;
     font-family: 'Castoro Titling', cursive;
     text-align: left;
     font-size: 21px;
     width: 100%;
-    
     margin-top: 0px;
     margin-bottom: 0px;
     padding: 5px 0px 5px 0px;
+&::selection{
+    background-color: $color-pages-active;
+    color: white;
+}
 }
 .footer-section {
-    background-color: #E6DDC6;
+    background-color: $color-2;
 
     .footer-iconos {
         display: flex;
@@ -25,9 +28,11 @@
             text-align: left;
             font-size: 19px;
             letter-spacing: 1;
-        
             color: black;
             margin-top: 0px;
+    &::selection{
+        background-color: $color-pages-active;
+        color: white;
     }
     
     }
@@ -37,4 +42,5 @@
         right: 67px;
     
     }
+}
 }
