--- a/scss/layout/_header-book.scss
+++ b/scss/layout/_header-book.scss
@@ -1,11 +1,9 @@
-body{
-    margin-top: 0px;
-}
+
 h2 {
     font-family: 'Castoro Titling', cursive;
     text-align: left;
     letter-spacing: 2px;
     margin-top: 0px;
     margin-bottom: 0px;
-    background-color: #E6DDC6;
+    background-color: $color-2;
     }
