--- a/scss/layout/_media-contenido320.scss
+++ b/scss/layout/_media-contenido320.scss
@@ -1,3 +1,5 @@
+@media (max-width:320px){
+
 .galeria-contenido{
     .img-contenido{
         .marca-1{
@@ -26,4 +28,5 @@
             height: 150px;
         }
     }
+}
 }
